# pets-iq-assistant

./: .gitignore  .replit  .vercelignore  Dockerfile.api  Dockerfile.roma  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  replit.md  start_roma_service.py  tailwind.config.ts  vercel.json  vet_roma_service.py  vite.config.ts
api/: index.ts
attached_assets/: Pasted-Backend-must-run-on-port-8000-expose-health-and-diagnose-talk-to-a-local-ROMA-service-on-8001-a-1757971499235_1757971499236.txt  Pasted-Project-tree-requirements-txt-app-py-roma-yaml-prompts-vet-system-txt-d-1757677889640_1757677889641.txt
client/src/: App.tsx  index.css
client/src/components/: chat-interface.tsx  footer.tsx  header.tsx  sidebar.tsx
client/src/lib/: triage.ts
client/src/pages/: home.tsx
data/: classifier.json  signals.json  symptoms.csv  triage.json
ml_service/: main.py  requirements.txt
roma/: server.js
scripts/: fetch_pets.js  normalize_to_symptoms_csv.js
server/: api-routes.ts  index.ts  openai-service.ts  roma-service.ts  routes.ts  storage.ts  telegram-bot.ts  vetdatahub-integration.ts
server/types/: js-modules.d.ts
services/: roma.js
shared/: schema.ts
src/: index.js  knowledgeBase.js  ml.js  openaiChat.js  romaClient.js  triageMap.js  validators.js
utils/: format.js  symptoms.js
